--- a/client/src/app.css
+++ b/client/src/app.css
@@ -81,7 +81,7 @@
   }
   
   
-  ul {
+  .ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -89,11 +89,11 @@
     background-color: #333;
   }
   
-  li {
+  .li {
     float: left;
   }
   
-  li a {
+  .li a {
     display: block;
     color: white;
     text-align: center;
@@ -102,7 +102,7 @@
   }
   
   /* Change the link color to #111 (black) on hover */
-  li a:hover {
+  .li a:hover {
     background-color: #111;
   }
   
