--- a/client/src/app.css
+++ b/client/src/app.css
@@ -142,3 +142,428 @@
     margin-top: 100px;
     margin-left: 100px;
   }
+
+
+  /*** STYLING **/
+
+  .loggedInDiv{
+    height:100;
+}
+.verifyEmailDiv{
+    display: flex;
+    justify-content: center;
+}
+.verify-code-form{
+    width: 50%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.profile-top-section{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.top-holder-section{
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+}
+.details-section {
+    background-color: #DCDCDC;
+    position: relative;
+    border-radius: 15px;
+    height: 200px; 
+    width: 84%;
+}
+.avatar-section{
+    background-color: #DCDCDC;
+    display:flex;
+    flex-direction: column;
+    border-radius: 15px;
+    height: 200px;
+    width: 15%;
+}
+
+.profile-buttons-section{
+    width: 100;
+    display: flex;
+    justify-content: center;
+}
+
+.name-of-post-type{
+    font-weight: bold;
+    font-size: 24px;
+    margin-top:5px;
+    margin-bottom:5px;
+    margin-left:5px;
+}
+
+.profile-posts-section{
+    width: 100;
+    display: flex;
+    justify-content: center;
+}
+
+.posts-holder-section{
+    margin-top:10px;
+    height: 100;
+    /* background-color: #DCDCDC;   */
+    width: 98%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.button-holder-section{
+    margin-top:10px;
+    height: 60px;
+    background-color: #DCDCDC;  
+    border-radius: 15px;
+    width: 98%;
+    display:flex;
+    justify-content: center;
+}
+
+.profile-button{
+    margin: 10px;
+    width: 18%;
+    height: 40px;
+
+}
+.profile-avatar {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    margin-top: 5px;
+    margin-bottom: 5px; 
+    z-index: 100;   
+} 
+.profile-avatar img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    width: 150px;
+    height: 100%;
+}
+.username{
+    font-weight: bold;
+    font-size: 20px;
+    margin:auto;
+}
+.user-info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.userprofile-name{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.home-post-holder-flex{
+    display:flex;
+    overflow-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
+
+.products-section{
+}
+
+.home-post-flex-children{
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+
+
+.buttons-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+button {
+  background: white;
+  padding: .375em 1.125em;
+  font-size: 1rem;
+  background: hsl(190deg, 30%, 15%);
+  color: hsl(190deg, 10%, 95%);
+  border-radius: 5px;
+}
+
+
+button:hover,
+button:focus {
+  box-shadow: 0 4px 8px hsla(190deg, 15%, 5%, .2);
+  background: hsl(230deg, 50%, 45%);
+}
+
+.searchparent{
+  display:flex;
+  justify-content: center;
+  height: 150px;  
+}
+.searchBar{
+  display:flex;
+  flex-direction: column;
+  width: 400px;
+  margin: 20px;
+  background-color:#DCDCDC;
+  border-radius: 15px;
+    height: 100px;
+  justify-content: center;
+}
+
+.options{
+  margin-top: 10px;
+  margin-bottom: 5px;
+  display:flex;
+  justify-content: center;
+}
+
+.post-detail-container{
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
+}
+
+.events-span{
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.body-posts{
+  margin: 40px;
+  /* display: flex; */
+  /* flex-direction: column; */
+}
+
+.home-event{
+  width: 200px;
+  height: 100px;
+  background-color: gray;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  
+}
+
+.home-rso{
+  width: 200px;
+  height: 120px;
+  background-color: gray;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  
+}
+
+.eventContainer{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.event-name{
+  font-weight: bold;
+  color: white;
+  background-color: #333;
+  border-radius: 15px;
+  text-align: center;
+  padding: 3px;
+}
+.event-details{
+  margin: 3px;
+}
+
+.post-detail-container{
+  display: flex;
+}
+.comments-div{
+  display: flex;
+  flex-direction: column;  
+}
+
+.post-details{
+  width: 500px;
+  height: 600px;
+  background-color: #DCDCDC;
+  border-radius: 25px;
+  margin: 10px;
+}
+
+.grand-event-name{
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.small-event-names{
+  font-weight: bold;
+  font-size: 30px;
+  margin: 10px;
+}
+
+.comments-div{
+  display: flex;
+  width: 600px;
+  background-color: #DCDCDC;
+  border-radius: 15px;
+  margin: 10px;
+}
+
+.listOfComments{
+  
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.comment{
+  background-color: #ACACAC;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.small-time{
+  font-weight: small;
+  font-size: 12px;
+  margin: 10px;
+}
+
+.username-comment{
+  font-weight: bold;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.main-message{
+  margin: 20px;
+}
+
+.buttons1{
+  width: 200px;
+}
+
+.button-outside-holder{
+  text-align: center
+}
+
+.comment-form{
+  text-align:center;
+}
+
+.comment-field{
+  width: 400px;
+  height: 50px;
+  margin:10px
+}
+
+.commentEditing{
+  border: 5px solid black;
+  border-radius: 15px;
+  position: absolute;
+  background-color: grey;
+  width: 500px;
+  height: 200px;
+  display:flex;
+  justify-content: center;
+  padding: 30px;
+  top:30%;
+  left:30%
+}
+
+.inner-title-edit{
+  font-weight: bold;
+  font-size: 20px;
+  margin: 10px;
+}
+
+#loginDiv{
+  width: 500px;
+  margin: auto;
+  margin-top: 150px;
+  padding: 20px;
+  height:200px;
+  display: flex;
+  flex-direction: column;
+  background-color:#DCDCDC;
+  border-radius: 20px;
+}
+
+#loginDiv input,select,span {
+  width: 300px;
+  margin:auto
+}
+
+#registerDiv{
+  width: 500px;
+  margin: auto;
+  margin-top: 100px;
+  padding: 20px;
+  height:400px;
+  display: flex;
+  flex-direction: column;
+  background-color:#DCDCDC;
+  border-radius: 20px;
+}
+
+#registerDiv input,select,span {
+  width: 300px;
+  margin:auto
+}
+
+#uploadRsoDiv{
+  width: 500px;
+  margin: auto;
+  margin-top: 100px;
+  padding: 20px;
+  height:350px;
+  display: flex;
+  flex-direction: column;
+  background-color:#DCDCDC;
+  border-radius: 20px;
+}
+
+#uploadPostDiv{
+  text-align: center;
+  width: 500px;
+  margin: auto;
+  margin-top: 60px;
+  padding: 20px;
+  height:500px;
+  display: flex;
+  flex-direction: column;
+  background-color:#DCDCDC;
+  border-radius: 20px;
+}
+
+#uploadRsoDiv input,select,span {
+  width: 300px;
+  margin:auto
+}
+
+.uploadPostInner{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.uploadPostInner input,select {
+  width: 300px;
+  margin:auto
+}
+
+.blocked{
+  color: red;
+}
