Create Rso feature. Misc additions

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -252,6 +252,7 @@
     font-weight: bold;
     font-size: 20px;
     margin:auto;
+    margin-left: 60px;
 }
 .user-info {
     position: absolute;
